подключил новый свг спрайт и стандартизировал иконки

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,59 +1,49 @@
-
-     <!--mobile menu -->
+<!--mobile menu -->
 <!-- <div class="mobile__block "> -->
-    <!-- <div class="container mobile__container"> -->
-    
-      
-      <!-- <button type="button" class="button__open" >
+<!-- <div class="container mobile__container"> -->
+
+<!-- <button type="button" class="button__open" >
         <svg class="" width="30" height="30">
-          <use href="./images/icons/icons.svg#icon-Burger">
+          <use href="./images/icons/icons.svg#icon-burger">
       
           </use>
         </svg>
       </button> -->
-      <div class="mobile__menu">
-      <button type="button" class="button__close">X
-        <svg class="" width="30" height="30">
-          <use href="./images/icons/icons.svg#icon-close">
-      
-          </use>
-        </svg>
-      </button>
+<div class="mobile__menu">
+  <button type="button" class="button__close">
+    <svg class="btn__icon-close" width="16" height="16">
+      <use href="./images/icons/icons.svg#icon-close"></use>
+    </svg>
+  </button>
 
-      
-        <button class="btn btn__modal" type="submit">Buy now
-          <svg class="button__icon" width="8" height="16">
-            <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
-          </svg>
-        </button>
+  <button class="btn btn__modal" type="submit">
+    Buy now
+    <svg class="button__icon" width="8" height="16">
+      <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+    </svg>
+  </button>
 
-
-        <nav class="navigation">    
-          
-                <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link nav__link--current" href="./index.html"> Home</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href=""> About us</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href=""> How it’s made?</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href=""> Our products</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href=""> Contact</a>
-                </li>
-                
-            </ul>
-        </nav>
-        
-        
-       
-      </div>
-    <!-- </div> -->
+  <nav class="navigation">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a class="nav__link nav__link--current" href="./index.html"> Home</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href=""> About us</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href=""> How it’s made?</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href=""> Our products</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href=""> Contact</a>
+      </li>
+    </ul>
+  </nav>
+</div>
+<!-- </div> -->
 <!-- </div> -->
 
 <!-- <button type="submit" class="online__button">
