--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -14,11 +14,11 @@
         </ul>
         <button type="button" class="burger-open-btn btn">
           <svg class="#" width="20" height="12">
-            <use href="./images/icons/icons.svg#icon-Burger"></use>
+            <use href="./images/icons/icons.svg#icon-burger"></use>
           </svg>
         </button>
     <button data-modal-buy-now-open type="button" class="btn__header btn">Buy now
-      <svg class="btn-about__icon" width="4" height="8">
+      <svg class="btn-about__icon" width="8" height="16">
         <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
     </svg>
     </button>
