--- a/src/sass/layout/_buy-now-modal.scss
+++ b/src/sass/layout/_buy-now-modal.scss
@@ -171,7 +171,7 @@
   font-size: 16px;
   line-height: 1.313;
 
-  color: var(--secondary-text-color);
+  color: var(--basic-text-color);
 
   outline: none;
   border: none;
