--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -1,446 +1,444 @@
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 .hero-header-wrap {
-    background-color: var(--main-bg-color);
-    z-index: -1;
+  background-color: var(--main-bg-color);
+  z-index: -1;
 }
 .hero-header {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  height: 502px;
+
+  padding-top: 8px;
+  padding-right: 20px;
+  padding-left: 20px;
+  overflow: hidden;
+
+  @include media(480px) {
+    width: 480px;
     height: 502px;
-    
-    padding-top: 8px;
-    padding-right: 20px;
-    padding-left: 20px;
-    overflow: hidden;
+  }
 
-    @include media(480px) {
-        width: 480px;
-        height: 502px;
-    }
-        
-    @include media(768px) {
-        width: 768px;
-        height: 416px;
-        padding-top: 32px;
-        padding-right: 32px;
-        padding-left: 32px;
-    }
+  @include media(768px) {
+    width: 768px;
+    height: 416px;
+    padding-top: 32px;
+    padding-right: 32px;
+    padding-left: 32px;
+  }
 
-    @include media(1280px) {
-        width: 1280px;
-        height: 664px;
-        padding-top: 40px;
-        padding-right: 16px;
-        padding-left: 16px;
-    }
+  @include media(1280px) {
+    width: 1280px;
+    height: 664px;
+    padding-top: 40px;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
 
 .nav {
-    display: flex;
-    align-items: center;
-} 
+  display: flex;
+  align-items: center;
+}
 
 .logo {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .nav__menu {
-    display: flex;
-    align-items: center;
-    margin-left: 175px;
-    margin-right: auto;
-    z-index: 1;
-    
-    @media screen and (max-width: 1279px) {
-        display: none;
-}
+  display: flex;
+  align-items: center;
+  margin-left: 175px;
+  margin-right: auto;
+  z-index: 1;
+
+  @media screen and (max-width: 1279px) {
+    display: none;
+  }
 }
 
 .nav__menu-item:not(:last-child) {
-   margin-right: 35px;
+  margin-right: 35px;
 }
 
 .nav__menu-link {
-    text-decoration: none;
-    font-family: 'DM Sans';
-    font-style: normal;
-    @include font (700, 16px, 21px, null);
-    color: var(--primary-text-color);
+  text-decoration: none;
+  font-family: 'DM Sans';
+  font-style: normal;
+  @include font(700, 16px, 21px, null);
+  color: var(--primary-text-color);
 }
 
 .nav__menu-link--current {
-    color: var(--accent-text-color);
+  color: var(--accent-text-color);
 }
 
 .hero-advantages {
-    position: absolute;
-    z-index: 1;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
-    @include media(768px) {
-        top: 94px;
-        right: 42px;
-    }
+  position: absolute;
+  z-index: 1;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @include media(768px) {
+    top: 94px;
+    right: 42px;
+  }
 
-    @include media(1280px) {
-        top: 157px;
-        right: 34px;
-    }
+  @include media(1280px) {
+    top: 157px;
+    right: 34px;
+  }
 }
 
 .hero-advantages__item:first-child {
-padding-bottom: 17px;
+  padding-bottom: 17px;
 }
 
 .hero-advantages__numbers {
-    font-family: 'Titan One';
-    font-style: normal;
-    text-align: right;
-    text-transform: uppercase;
-    color: var(--accent-text-color);
+  font-family: 'Titan One';
+  font-style: normal;
+  text-align: right;
+  text-transform: uppercase;
+  color: var(--accent-text-color);
 
-    @include media(768px) {
-        @include font (400, 28px, 32px, 0.04em);
-        padding-bottom: 2px;
-    }
-    @include media(1280px) {
-        @include font (400, 46px, 53px, 0.04em); 
-    }
+  @include media(768px) {
+    @include font(400, 28px, 32px, 0.04em);
+    padding-bottom: 2px;
+  }
+  @include media(1280px) {
+    @include font(400, 46px, 53px, 0.04em);
+  }
 }
 
 .hero-advantages__text {
-    font-family: 'DM Sans';
-    text-align: right;
-    color: var(--primary-text-color);
+  font-family: 'DM Sans';
+  text-align: right;
+  color: var(--primary-text-color);
 
-    @include media(768px) {
-        @include font (400, 8px, 10px, null);
-    }
-    
-    @include media(1280px) {
-        @include font (400, 14px, 18px, null); 
-    }
+  @include media(768px) {
+    @include font(400, 8px, 10px, null);
+  }
+
+  @include media(1280px) {
+    @include font(400, 14px, 18px, null);
+  }
 }
 
 .btn__header {
-    @media screen and (max-width: 767px) {
-        display: none;
-}
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .btn-about__icon {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 
 .burger-open-btn {
-    position: absolute;
-    z-index: 50;
-    // margin-left: auto;
-    right: 0;
-    margin-right: 20px;
-    padding: 0;
-    background-color: transparent;
-    @include media(768px) {
-        // margin-left: 293px;
-        // margin-right: 32px;
-        // right: 0;
-        margin-right: 224px;
-    }
+  position: absolute;
+  z-index: 50;
+  // margin-left: auto;
+  right: 0;
+  margin-right: 20px;
+  padding: 0;
+  background-color: transparent;
+  @include media(768px) {
+    // margin-left: 293px;
+    // margin-right: 32px;
+    // right: 0;
+    margin-right: 224px;
+  }
 
-    @include media(1280px) {
-        display: none;
+  @include media(1280px) {
+    display: none;
+  }
 }
-}
-     
+
 .hero-title {
-    position: absolute;
-    z-index: 2;
-    font-family: 'Titan One';
-    @include font(400, 26px, 30px, 0.04em);
-    text-transform: uppercase;
-    color: var(--primary-text-color);
+  position: absolute;
+  z-index: 2;
+  font-family: 'Titan One';
+  @include font(400, 26px, 30px, 0.04em);
+  text-transform: uppercase;
+  color: var(--primary-text-color);
 
-    width: 218px;
-    height: 106px;
-    top: 194px;
-    left: 20px;
+  width: 218px;
+  height: 106px;
+  top: 194px;
+  left: 20px;
 
-    @include media(768px) {
-        @include font(400, 22px, 25px, 0.04em);
-        top: 102px;
-        left: 32px;
-        width: 162px;
-        height: 80px;
-    }
+  @include media(768px) {
+    @include font(400, 22px, 25px, 0.04em);
+    top: 102px;
+    left: 32px;
+    width: 162px;
+    height: 80px;
+  }
 
-    @include media(1280px) {
-        @include font(400, 38px, 44px, 0.04em);
-        top: 147px;
-        left: 16px;
-        width: 277px;
-        height: 137px;
-    }
+  @include media(1280px) {
+    @include font(400, 38px, 44px, 0.04em);
+    top: 147px;
+    left: 16px;
+    width: 277px;
+    height: 137px;
+  }
 }
 
 .hero-title__current {
-    font-family: 'Titan One';
-    @include font(400, 48px, 46px, null);
-    text-transform: uppercase;
-    color: var(--accent-text-color);
+  font-family: 'Titan One';
+  @include font(400, 48px, 46px, null);
+  text-transform: uppercase;
+  color: var(--accent-text-color);
 
-    @include media(768px) {
-        @include font(400, 34px, 31px, 0.04em);
-    }
-    @include media(1280px) {
-        @include font(400, 58px, 52px, 0.04em);
-    }
+  @include media(768px) {
+    @include font(400, 34px, 31px, 0.04em);
+  }
+  @include media(1280px) {
+    @include font(400, 58px, 52px, 0.04em);
+  }
 }
 
 .hero__slogan {
-    position: absolute;
-    z-index: 1;
-    bottom: 81px;
-    left: 184px;
+  position: absolute;
+  z-index: 1;
+  bottom: 81px;
+  left: 184px;
 
-    width: 114px;
-    height: 48px;
-    color: #FFFFFF;
-    font-family: 'DM Sans';
-    @include font(400, 8px, 12px, null);
-    
-    @media screen and (max-width: 767px) {
-        display: none;
-}
-    @include media(1280px) {
-        bottom: 130px;
-        left: 229px;
+  width: 114px;
+  height: 48px;
+  color: #ffffff;
+  font-family: 'DM Sans';
+  @include font(400, 8px, 12px, null);
 
-        width: 200px;
-        height: 78px;
-        @include font(400, 14px, 20px, null);
-    }
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @include media(1280px) {
+    bottom: 130px;
+    left: 229px;
+
+    width: 200px;
+    height: 78px;
+    @include font(400, 14px, 20px, null);
+  }
 }
 
 .pink-ellipse {
-    width: 346px;
-    height: 344px;
-    position: absolute;
-    bottom: 75px;
-    left: 36px;
-    z-index: 0;
+  width: 346px;
+  height: 344px;
+  position: absolute;
+  bottom: 75px;
+  left: 36px;
+  z-index: 0;
 
-    @include media(768px) {
-        width: 335px;
-        height: 333px;
-        bottom: 40px;
-        left: 248px;
-    }
+  @include media(768px) {
+    width: 335px;
+    height: 333px;
+    bottom: 40px;
+    left: 248px;
+  }
 
-    @include media(1280px) {
-        width: 534px;
-        height: 534px;
-        bottom: 76px;
-        left: 517px;
-    }
+  @include media(1280px) {
+    width: 534px;
+    height: 534px;
+    bottom: 76px;
+    left: 517px;
+  }
 }
 
 .icecream-cone {
-    position: absolute;
-    top: 92px;
-    left: 117px;
-    z-index: 1;
-    animation-name: icecream-cone;
-    animation-duration: 1s;
-    animation-timing-function: linear;
+  position: absolute;
+  top: 92px;
+  left: 117px;
+  z-index: 1;
+  animation-name: icecream-cone;
+  animation-duration: 1s;
+  animation-timing-function: linear;
 
-    @keyframes icecream-cone {
-        0% {
-            transform: translateY(400px);
-        }
-        100% {
-            transform: translateY(0);
-        }
+  @keyframes icecream-cone {
+    0% {
+      transform: translateY(400px);
     }
+    100% {
+      transform: translateY(0);
+    }
+  }
 
-    @include media(768px) {
-        top: 80px;
-        left: 322px;
-    }
-    @include media(1280px) {
-        top: 108px;
-        left: 636px;
-    }
+  @include media(768px) {
+    top: 80px;
+    left: 322px;
+  }
+  @include media(1280px) {
+    top: 108px;
+    left: 636px;
+  }
 }
 
 .milk-jug {
-    position: absolute;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
-    animation-name: milk-jug;
-    animation-duration: 1s;
-    animation-timing-function:linear;
+  position: absolute;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  animation-name: milk-jug;
+  animation-duration: 1s;
+  animation-timing-function: linear;
 
-    @keyframes milk-jug {
-        0% {
-    transform: scale(0);
+  @keyframes milk-jug {
+    0% {
+      transform: scale(0);
     }
-        100% {
-    transform: scale(1);
+    100% {
+      transform: scale(1);
     }
-}
+  }
 
-@include media(768px) {
+  @include media(768px) {
     top: 246px;
     left: 32px;
     bottom: 16px;
-}
+  }
 
-@include media(1280px) {
+  @include media(1280px) {
     top: 388px;
     left: 16px;
     bottom: 60px;
-}
+  }
 }
 
 .girl-icecream {
-    position: absolute;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
-    animation-name: girl-icecream;
-    animation-duration: 1s;
-    animation-timing-function:linear;
+  position: absolute;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  animation-name: girl-icecream;
+  animation-duration: 1s;
+  animation-timing-function: linear;
 
-@keyframes girl-icecream {
+  @keyframes girl-icecream {
     0% {
-        transform: scale(0);
+      transform: scale(0);
     }
     100% {
-        transform: scale(1);
+      transform: scale(1);
     }
-}
+  }
 
-
-@include media(768px) {
+  @include media(768px) {
     top: 265px;
     left: 546px;
-}
+  }
 
-@include media(1280px) {
+  @include media(1280px) {
     top: 424px;
     left: 960px;
-}
+  }
 }
 
 .arrow-right {
-    position: absolute;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
+  position: absolute;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-@include media(768px) {
+  @include media(768px) {
     bottom: 56px;
     left: 184px;
-}
+  }
 
-@include media(1280px) {
+  @include media(1280px) {
     bottom: 84px;
     left: 229px;
-}
+  }
 }
 
 .white-ellipse {
-    position: absolute;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
+  position: absolute;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-@include media(768px) {
+  @include media(768px) {
     width: 16px;
     height: 16px;
     top: 92px;
     left: 720px;
-}
+  }
 
-@include media(1280px) {
+  @include media(1280px) {
     width: 30px;
     height: 30px;
     top: 153px;
     left: 1234px;
-}
+  }
 }
 
 .white-ellipse-second {
-    position: absolute;
-    @media screen and (max-width: 767px) {
-        display: none;
-}
+  position: absolute;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-@include media(768px) {
+  @include media(768px) {
     width: 16px;
     height: 16px;
     top: 152px;
     left: 720px;
-}
+  }
 
-@include media(1280px) {
+  @include media(1280px) {
     width: 30px;
     height: 30px;
     top: 245px;
     left: 1234px;
-}
+  }
 }
 
 .button-wrap {
-    display: flex;
-    position: absolute;
-    top: 320px;
-    left: 20px;
-    z-index: 2;
+  display: flex;
+  position: absolute;
+  top: 320px;
+  left: 20px;
+  z-index: 2;
 
-    @include media(768px) {
-        top: 202px;
-        left: 32px;
-    }
+  @include media(768px) {
+    top: 202px;
+    left: 32px;
+  }
 
-    @include media(1280px) {
-        top: 308px;
-        left: 16px;
-    }
+  @include media(1280px) {
+    top: 308px;
+    left: 16px;
+  }
 }
 
 .hero-primary-btn {
-    @include font (400, 8px, 10px, null); 
-    @include btn-color(#FFFFFF, #D41443,#C7133E);
-    @include btn-form(62.4px, 24px, 20px);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    margin-right: 8px;
+  @include font(400, 8px, 10px, null);
+  @include btn-color(#ffffff, #d41443, #c7133e);
+  @include btn-form(62.4px, 24px, 20px);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @include media(1280px) {
-        @include font (400, 14px, 18px, null); 
-        @include btn-form(107px, 40px, 20px);
+  margin-right: 8px;
 
-        margin-right: 12px; 
-    }
+  @include media(1280px) {
+    @include font(400, 14px, 18px, null);
+    @include btn-form(107px, 40px, 20px);
+
+    margin-right: 12px;
+  }
 }
 
 .hero-secondary-btn {
-    @include font (400, 8px, 10px, null); 
-    @include btn-color(#D41443,#FFFFFF,#ECEBEB);
-    @include btn-form(82.8px, 24px, 20px);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include font(400, 8px, 10px, null);
+  @include btn-color(#d41443, #ffffff, #ecebeb);
+  @include btn-form(82.8px, 24px, 20px);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @include media(1280px) {
-        @include font (400, 14px, 18px, null); 
-        @include btn-form(138px, 40px, 20px);
-    }
+  @include media(1280px) {
+    @include font(400, 14px, 18px, null);
+    @include btn-form(138px, 40px, 20px);
+  }
 }
-
