--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,142 +1,123 @@
+// .mobile__block {
+//   z-index: 50;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   height: 100vh;
 
-  // .mobile__block {
-  //   z-index: 50;
-  //   position: fixed;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100vw;
-  //   height: 100vh;
-    
-  // // }
-  // .mobile__container {
-    
-  //   align-items: center;
-  //   // position: relative;
-  //   display: flex;
-  //   justify-content: space-between;
-  
-  //   @media screen and (min-width: 768px) {
-    
-  //   }
-  // }
+// // }
+// .mobile__container {
 
-  .navigation {
-  
-  }
-  
-  .nav__link {
-   
-    position: relative;
-   
-  
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    
-    color: var(--primary-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-    &:hover,
-    &:focus {
-      color: var(--accent-text-color);
-    }
-    &:hover::after,
-    &:focus::after {
-      opacity: 1;
-    }
-  
-    @media screen and (min-width: 768px) {
-      display: block;
-      // padding-top: 32px;
-      padding-bottom: 32px;
-      
-     
-    }
-  }
-  
-  .nav__item:not(:last-child) {
-    @media screen and (max-width: 767px) {
-      flex-direction: column;
-      margin-bottom: 23px;
-      border-bottom: 1px solid #E18298;
-    }
-  }
-  
+//   align-items: center;
+//   // position: relative;
+//   display: flex;
+//   justify-content: space-between;
 
-  
-  
-  .mobile__menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 11;
-    width: 250px;
-    height: 100vh;
-    padding-left: 20px;
-    padding-top: 60px;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
- 
-  
-    @media screen and (min-width: 768px) {
+//   @media screen and (min-width: 768px) {
 
-    
-      // transform: translateX(100%);
-      // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+//   }
+// }
+
+.navigation {
+}
+
+.nav__link {
+  position: relative;
+
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+
+  color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-text-color);
   }
-  
-  .mobile__menu.is-open {
-  
-    transform: translateX(0);
-    background-color: #E17992;
+  &:hover::after,
+  &:focus::after {
+    opacity: 1;
   }
 
-  .button__open    {
-    position: absolute;
-    top: 27px;
-    right: 20px;
-  
-    background-color: transparent;
-    border: none;
-  
-    &:hover,
-    &:focus
-   {
-      fill: var(--btn-accent-bg-color);
-    }
-    @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
+    display: block;
+    // padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.nav__item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    margin-bottom: 23px;
+    border-bottom: 1px solid #e18298;
+  }
+}
+
+.mobile__menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 11;
+  width: 250px;
+  height: 100vh;
+  padding-left: 20px;
+  padding-top: 60px;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    // transform: translateX(100%);
+    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.mobile__menu.is-open {
+  transform: translateX(0);
+  background-color: #e17992;
+}
+
+.button__open {
+  position: absolute;
+  top: 27px;
+  right: 20px;
+
+  background-color: transparent;
+  border: none;
+
+  &:hover,
+  &:focus {
+    fill: var(--btn-accent-bg-color);
+  }
+  @media screen and (min-width: 768px) {
     right: 224px;
-    }
   }
+}
 
+.button__close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 
+  background-color: transparent;
+  border: none;
 
-  .button__close    {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  
-    background-color: transparent;
-    border: none;
-  
-    &:hover,
-    &:focus
-   {
-      fill: var(--btn-accent-bg-color);
-    }
-    @media screen and (min-width: 768px) {
-    
-    }
+  &:hover,
+  &:focus {
+    fill: var(--btn-accent-bg-color);
   }
-
-  .button__icon {
-    margin-left: 16px;
+  @media screen and (min-width: 768px) {
   }
+}
 
- 
+.btn__icon-close {
+  fill: currentColor;
+}
 
-
-  
+.button__icon {
+  margin-left: 16px;
+}
