--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -16,7 +16,7 @@
     </svg>
   </button>
 
-  <button class="btn btn__modal" type="submit">
+  <button data-modal-buy-now-open-mob-menu class="btn btn__modal">
     Buy now
     <svg class="button__icon" width="8" height="16">
       <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
