--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,28 +8,28 @@
             <ul class="footer__sms list">
                 <li class="footer__site">
                     <a href="https://github.com" target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
-                        <svg class="footer__icons">
+                        <svg class="footer__icons" width="34" height="34">
                             <use href="./images/icons/icons.svg#icon-github"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer__site">
                     <a href="https://web.telegram.org"  target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
-                        <svg class="footer__icons">
+                        <svg class="footer__icons" width="34" height="34">
                             <use href="./images/icons/icons.svg#icon-telegram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer__site">
                     <a href="https://www.facebook.com"  target="_blank" rel="noopener noreferrer nofollow" class="footer__link link">
-                        <svg class="footer__icons">
+                        <svg class="footer__icons" width="34" height="34">
                             <use href="./images/icons/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
 
-            <p class="footer__text">Feel free to contact <a class="footer__tel link" href="tel:+61(0)383766284">+61 (0)
+            <p class="footer__text">Feel free to contact <a class="footer__tel link" href="tel:+610383766284">+61 (0)
                     383 766 284</a></p>
 
         </div>
