--- a/src/sass/layout/_our-location-modal.scss
+++ b/src/sass/layout/_our-location-modal.scss
@@ -9,7 +9,7 @@
     padding: 15px;
     z-index: 5;
 
-    overflow-y: scroll;
+    // overflow-y: scroll;
     background: rgba(0, 0, 0, 0.2);
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
