--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -27,8 +27,9 @@
 
         background-image: url('../images/img/m2-desk_1x.png');
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: 1280px 521px;
         background-position-y: 255px;
+        background-position-x: center;
         
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
@@ -80,6 +81,48 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+}
+
+.about-img {
+    width: 280px;
+    height: 279px;
+    background-image: url('../images/img/m1-mob_1x.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        background-image: url('../images/img/m1-mob_2x.png');
+    }
+
+    @include media($tab) {
+        width: 336px;
+        height: 335px;
+        background-image: url('../images/img/m1-tab_1x.png');
+        background-repeat: no-repeat;
+        background-size: contain;
+        
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url('../images/img/m1-tab_2x.png');
+        }
+    }
+
+    @include media($desk) {
+        width: 501px;
+        height: 501px;
+        background-image: url('../images/img/m1-desk_1x.png');
+        background-repeat: no-repeat;
+        background-size: contain;
+        
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: url('../images/img/m1-desk_2x.png');
+        }
     }
 }
 
