--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -231,7 +231,7 @@ a {
         width: 393px;
     }
     &__locat {
-    @include btn-color( #FFFFFF,#D41342, #D41342);
+    @include btn-color( #FFFFFF,#D41342, #C7133E);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @include font(700, 16px, 21px, null);
     @include btn-form(162px, 44px, 22px);
