--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -71,6 +71,12 @@ html {
     font-style: normal;
     @include font (700, 16px, 21px, null);
     color: var(--primary-text-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+        color: var(--accent-text-color);
+    }
 }
 
 .nav__menu-link--current {
