--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -25,7 +25,7 @@
 
         background-image: url('../images/img/m2-desk_1x.png');
         background-repeat: no-repeat;
-        background-size: 1280px 521px;
+        background-size: contain;
         background-position-y: 255px;
         background-position-x: center;
         
