--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -7,8 +7,8 @@
         </a>
         <ul class="nav__menu">
             <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link--current" href="">Home</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#about-us">About us</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#how-it's-made">How it's made</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#advantages">About us</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#about">How it's made</a></li>
             <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
             <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
         </ul>
