--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,7 +38,7 @@
             class="footer__link link"
           >
             <svg width="20" height="20" class="footer__icons">
-              <use " href="./images/icons/icons.svg#icon-facebook"></use>
+              <use href="./images/icons/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
