fix id кнопки how it's made

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -2,26 +2,35 @@
   <section class="hero-header">
     <h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
     <nav class="nav">
-        <a href="" class="logo">
-            <img srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x" src="./images/img/logo_1x.png" alt="Icecream logo" width="199" height="50">
-        </a>
-        <ul class="nav__menu">
-            <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link--current" href="">Home</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#advantages">About us</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#about">How it's made</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
-        </ul>
-        <button type="button" class="burger-open-btn btn">
-          <svg class="#" width="20" height="12">
-            <use href="./images/icons/icons.svg#icon-burger"></use>
-          </svg>
-        </button>
-    <button data-modal-buy-now-open type="button" class="btn__header btn">Buy now
-      <svg class="btn-about__icon" width="8" height="16">
-        <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
-    </svg>
-    </button>
+      <a href="" class="logo">
+        <img
+          srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x"
+          src="./images/img/logo_1x.png"
+          alt="Icecream logo"
+          width="199"
+          height="50"
+        />
+      </a>
+      <ul class="nav__menu">
+        <li class="nav__menu-item">
+          <a class="nav__menu-link nav__menu-link--current" href="">Home</a>
+        </li>
+        <li class="nav__menu-item"><a class="nav__menu-link" href="#advantages">About us</a></li>
+        <li class="nav__menu-item"><a class="nav__menu-link" href="#about">How it's made</a></li>
+        <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
+        <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
+      </ul>
+      <button type="button" class="burger-open-btn btn">
+        <svg class="#" width="20" height="12">
+          <use href="./images/icons/icons.svg#icon-burger"></use>
+        </svg>
+      </button>
+      <button data-modal-buy-now-open type="button" class="btn__header btn">
+        Buy now
+        <svg class="btn-about__icon" width="8" height="16">
+          <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+        </svg>
+      </button>
     </nav>
     <ul class="hero-advantages">
       <li class="hero-advantages__item">
@@ -121,8 +130,8 @@
       />
     </div>
     <ul class="button-wrap">
-       <li><a href="#products" class="hero-primary-btn btn">Products</a></li>
-       <li><a href="#how-it's-made" class="hero-secondary-btn btn">How it's made</a></li>
+      <li><a href="#products" class="hero-primary-btn btn">Products</a></li>
+      <li><a href="#about" class="hero-secondary-btn btn">How it's made</a></li>
     </ul>
   </section>
 </div>
