fix якоря на кнопке contatc в навигации сайта

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -18,7 +18,7 @@
         <li class="nav__menu-item"><a class="nav__menu-link" href="#advantages">About us</a></li>
         <li class="nav__menu-item"><a class="nav__menu-link" href="#about">How it's made</a></li>
         <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
-        <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
+        <li class="nav__menu-item"><a class="nav__menu-link" href="#contact">Contact</a></li>
       </ul>
       <button type="button" class="burger-open-btn btn">
         <svg class="#" width="20" height="12">
