--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -99,23 +99,26 @@
         />
         <img src="./images/img/h3-desk_1x.png" alt="Girl eats ice cream" />
       </picture>
-      <picture class="arrow-right">
-        <source
-          srcset="
-            ./images/img/h5-arrow-right-desk_1x.png 1x,
-            ./images/img/h5-arrow-right-desk_2x.png 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
-            ./images/img/h5-arrow-right-tab_1x.png 1x,
-            ./images/img/h5-arrow-right-tab_2x.png 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <img src="./images/img/h5-arrow-right-desk_1x.png" alt="arrow right sign" />
-      </picture>
+      <a href="#about" class="arrow-right__link">
+        <picture class="arrow-right">
+          <source
+            srcset="
+              ./images/img/h5-arrow-right-desk_1x.png 1x,
+              ./images/img/h5-arrow-right-desk_2x.png 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/img/h5-arrow-right-tab_1x.png 1x,
+              ./images/img/h5-arrow-right-tab_2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <img src="./images/img/h5-arrow-right-desk_1x.png" alt="arrow right sign" />
+        </picture>
+      </a>
+
       <img
         class="white-ellipse"
         srcset="./images/img/h6-ellipse-desk_1x.png 1x, ./images/img/h6-ellipse-desk_2x.png 2x"
