--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -133,7 +133,9 @@
       />
     </div>
     <ul class="button-wrap">
-      <li><a href="#products" class="hero-primary-btn btn">Products</a></li>
+      <li class="button-wrap__item">
+        <a href="#products" class="hero-primary-btn btn">Products</a>
+      </li>
       <li><a href="#about" class="hero-secondary-btn btn">How it's made</a></li>
     </ul>
   </section>
