правки секции products, добавил current на Home в мобильном меню, удалил комменты

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,141 +1,92 @@
 <section class="products" id="products">
   <div class="container">
-  
     <p class="products__title-text">100% natural</p>
-  <h2 class="products__title">products</h2>
+    <h2 class="products__title">products</h2>
 
-  
-  <ul class="products__list">
-    <li class="products__item accent--pink">
-      <div class="products__trumb trumb-pink ">
-        </div>
-      <h3 class="products__item-title">ice cream</h3>
-      
-      
-      <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-      <button class="products__btn">
-        <picture>
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 1280px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 768px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 480px)" 
-          />
-          <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="ice cream" >
-        </picture>
-      </button>
-    </li>
-    
-    <li class="products__item accent--caramel">
-      <div class="products__trumb trumb-caramel ">
-        
-    </div>
-      
-      <h3 class="products__item-title">ice coffee</h3>
-      
- 
-      <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-      <button class="products__btn">
-        <picture>
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 1280px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 768px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 480px)" 
-          />
-          <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="ice coffee" >
-        </picture>
-      </button>
-    </li>
-    
-    <li class="products__item accent--green">
-      <div class="products__trumb  trumb-green">
-     
-      </div>
-      
-      <h3 class="products__item-title">milkshakes</h3>
-     
-    
-      <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis. </p>
-      <button class="products__btn">
-        <picture>
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 1280px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 768px)" 
-          />
-          
-        
-          <source
-          
-          srcset="
-          ././images/img/p_arrow-right1x.png 1x,
-          ././images/img/p_arrow-right2x.png 2x
-      "
-         media="(min-width: 480px)" 
-          />
-          <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="milkshakes">
-        </picture>
-      </button>
-    </li>
-  </ul>
+    <ul class="products__list">
+      <li class="products__item accent--pink trumb-pink">
+        <h3 class="products__item-title">ice cream</h3>
 
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__btn">
+          <picture>
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 1280px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 768px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 480px)"
+            />
+            <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="ice cream" />
+          </picture>
+        </button>
+      </li>
+
+      <li class="products__item accent--caramel trumb-caramel">
+        <h3 class="products__item-title">ice coffee</h3>
+
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__btn">
+          <picture>
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 1280px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 768px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 480px)"
+            />
+            <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="ice coffee" />
+          </picture>
+        </button>
+      </li>
+
+      <li class="products__item accent--green trumb-green">
+        <h3 class="products__item-title">milkshakes</h3>
+
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <button class="products__btn">
+          <picture>
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 1280px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 768px)"
+            />
+
+            <source
+              srcset="././images/img/p_arrow-right1x.png 1x, ././images/img/p_arrow-right2x.png 2x"
+              media="(min-width: 480px)"
+            />
+            <img class="img-arrow" src="././images/img/p_arrow-right2x.png" alt="milkshakes" />
+          </picture>
+        </button>
+      </li>
+    </ul>
   </div>
 </section>
