--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,13 +1,9 @@
-
-     
-    <div class="mobile__menu">
-      <button type="button" class="button__close">
-        <svg class="button__close-icon" width="14" height="14">
-          <use href="./images/icons/icons.svg#icon-close">
-      
-          </use>
-        </svg>
-      </button>
+<div class="mobile__menu">
+  <button type="button" class="button__close">
+    <svg class="button__close-icon" width="14" height="14">
+      <use href="./images/icons/icons.svg#icon-close"></use>
+    </svg>
+  </button>
 
   <button data-modal-buy-now-open-mob-menu class="btn btn__modal">
     Buy now
@@ -16,28 +12,23 @@
     </svg>
   </button>
 
-
-        <nav class="navigation">    
-          
-            <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link " href="./index.html"> Home</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#advantages"> About us</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#about"> How it’s made?</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#products"> Our products</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#contact"> Contact</a>
-                </li>
-                
-            </ul>
-        </nav>       
-       
-    </div>
-
+  <nav class="navigation">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a class="nav__link nav__link--current" href="./index.html"> Home</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#advantages"> About us</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#about"> How it’s made?</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#products"> Our products</a>
+      </li>
+      <li class="nav__item">
+        <a class="nav__link" href="#contact"> Contact</a>
+      </li>
+    </ul>
+  </nav>
+</div>
