--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,225 +7,220 @@
         <li class="catering__item">
           <div class="cater-card">
             <p class="catering__name catering__name_beige">CAFE</p>
-            <div class="cater-card__list">
-              <div class="cater-card__pic">
-                <div class="cater-placepic">
-                  <div class="cater-place">
-                    <p class="cater-place__name">Chicago</p>
-                    <p class="cater-place__text">
-                      Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </p>
-                  </div>
-                  <div class="cater-time">
-                    <ul class="cater-time__list">
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Monday - Friday</p>
-                        <p class="cater-time__time">06:00 AM - 10:00 PM</p>
-                      </li>
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Saturday - Sunday</p>
-                        <p class="cater-time__time">08:00 AM - 10:00 PM</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <picture>
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-bar_640.jpg 1x,
-                      ./images/img/food-cafe-bar_640.jpg 2x
-                    "
-                    media="(min-width: 1200px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-bar_420.jpg 1x,
-                      ./images/img/food-cafe-bar_420.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-bar_640.jpg 1x,
-                      ./images/img/food-cafe-bar_640.jpg 2x
-                    "
-                    media="(min-width: 480px)"
-                  />
-                  <img
-                    src="./images/img/food-cafe-bar_640.jpg"
-                    alt="Cafe-Bar Ice cream"
-                    class="cater-card_img"
-                  />
-                </picture>
-              </div>
 
-              <ul class="cater-cont">
-                <li class="cater-cont__item">
-                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
-                    >+61&#40;0&#41; 383 766 284</a
-                  >
-                </li>
-                <li class="cater-cont__item">
-                  <a
-                    href="mailto:noreply@envato.com"
-                    class="cater-cont__link cater-cont__link__mail"
-                    >noreply@envato.com</a
-                  >
-                </li>
-              </ul>
+            <div class="cater-card__pic">
+              <div class="cater-placepic">
+                <div class="cater-place">
+                  <p class="cater-place__name">Chicago</p>
+                  <p class="cater-place__text">
+                    Fusce ut velit laoreet, tempus arcu molestie vulputate
+                  </p>
+                </div>
+                <div class="cater-time">
+                  <ul class="cater-time__list">
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Monday - Friday</p>
+                      <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Saturday - Sunday</p>
+                      <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <picture>
+                <source
+                  srcset="
+                    ./images/img/food-cafe-bar_640.jpg 1x,
+                    ./images/img/food-cafe-bar_640.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img/food-cafe-bar_420.jpg 1x,
+                    ./images/img/food-cafe-bar_420.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img/food-cafe-bar_640.jpg 1x,
+                    ./images/img/food-cafe-bar_640.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/img/food-cafe-bar_640.jpg"
+                  alt="Cafe-Bar Ice cream"
+                  class="cater-card_img"
+                />
+              </picture>
             </div>
+
+            <ul class="cater-cont">
+              <li class="cater-cont__item">
+                <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                  >+61&#40;0&#41; 383 766 284</a
+                >
+              </li>
+              <li class="cater-cont__item">
+                <a href="mailto:noreply@envato.com" class="cater-cont__link cater-cont__link__mail"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
           </div>
         </li>
         <li class="catering__item">
           <div class="cater-card">
             <p class="catering__name catering__name_green">FOODTRUCK</p>
-            <div class="cater-card__list">
-              <div class="cater-card__pic">
-                <div class="cater-placepic">
-                  <div class="cater-place">
-                    <p class="cater-place__name">Los Angeles</p>
-                    <p class="cater-place__text">
-                      Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </p>
-                  </div>
-                  <div class="cater-time">
-                    <ul class="cater-time__list">
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Monday - Friday</p>
-                        <p class="cater-time__time">06:00 AM - 10:00 PM</p>
-                      </li>
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Saturday - Sunday</p>
-                        <p class="cater-time__time">08:00 AM - 10:00 PM</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <picture>
-                  <source
-                    srcset="./images/img/food-truck_640.jpg 1x, ./images/img/food-truck_640.jpg 2x"
-                    media="(min-width: 1200px)"
-                  />
-                  <source
-                    srcset="./images/img/food-truck_450.jpg 1x, ./images/img/food-truck_450.jpg 2x"
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="./images/img/food-truck_640.jpg 1x, ./images/img/food-truck_640.jpg 2x"
-                    media="(min-width: 480px)"
-                  />
-                  <img
-                    src="./images/img/food-truck_640.jpg"
-                    alt="Food Truck Ice cream"
-                    class="cater-card_img"
-                  />
-                </picture>
-              </div>
 
-              <ul class="cater-cont">
-                <li class="cater-cont__item">
-                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
-                    >+61&#40;0&#41; 383 766 284</a
-                  >
-                </li>
-                <li class="cater-cont__item">
-                  <a
-                    href="mailto:noreply@envato.com"
-                    class="cater-cont__link cater-cont__link__mail"
-                    >noreply@envato.com</a
-                  >
-                </li>
-              </ul>
+            <div class="cater-card__pic">
+              <div class="cater-placepic">
+                <div class="cater-place">
+                  <p class="cater-place__name">Los Angeles</p>
+                  <p class="cater-place__text">
+                    Fusce ut velit laoreet, tempus arcu molestie vulputate
+                  </p>
+                </div>
+                <div class="cater-time">
+                  <ul class="cater-time__list">
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Monday - Friday</p>
+                      <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Saturday - Sunday</p>
+                      <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <picture>
+                <source
+                  srcset="./images/img/food-truck_640.jpg 1x, ./images/img/food-truck_640.jpg 2x"
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="./images/img/food-truck_450.jpg 1x, ./images/img/food-truck_450.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/img/food-truck_640.jpg 1x, ./images/img/food-truck_640.jpg 2x"
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/img/food-truck_640.jpg"
+                  alt="Food Truck Ice cream"
+                  class="cater-card_img"
+                />
+              </picture>
             </div>
+
+            <ul class="cater-cont">
+              <li class="cater-cont__item">
+                <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                  >+61&#40;0&#41; 383 766 284</a
+                >
+              </li>
+              <li class="cater-cont__item">
+                <a href="mailto:noreply@envato.com" class="cater-cont__link cater-cont__link__mail"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
           </div>
         </li>
         <li class="catering__item">
           <div class="cater-card">
             <p class="catering__name catering__name_beige">CAFE</p>
-            <div class="cater-card__list">
-              <div class="cater-card__pic">
-                <div class="cater-placepic">
-                  <div class="cater-place">
-                    <p class="cater-place__name">New York</p>
-                    <p class="cater-place__text">
-                      Fusce ut velit laoreet, tempus arcu molestie vulputate
-                    </p>
-                  </div>
-                  <div class="cater-time">
-                    <ul class="cater-time__list">
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Monday - Friday</p>
-                        <p class="cater-time__time">06:00 AM - 10:00 PM</p>
-                      </li>
-                      <li class="cater-time__item">
-                        <p class="cater-time__name">Saturday - Sunday</p>
-                        <p class="cater-time__time">08:00 AM - 10:00 PM</p>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <picture>
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-waffle_640.jpg 1x,
-                      ./images/img/food-cafe-waffle_640.jpg 2x
-                    "
-                    media="(min-width: 1200px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-waffle_480.jpg 1x,
-                      ./images/img/food-cafe-waffle_480.jpg 2x
-                    "
-                    media="(min-width: 768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/img/food-cafe-waffle_640.jpg 1x,
-                      ./images/img/food-cafe-waffle_640.jpg 2x
-                    "
-                    media="(min-width: 480px)"
-                  />
-                  <img
-                    src="./images/img/food-cafe-waffle_640.jpg"
-                    alt="Cafe-Waffle Ice cream"
-                    class="cater-card_img"
-                  />
-                </picture>
-              </div>
 
-              <ul class="cater-cont">
-                <li class="cater-cont__item">
-                  <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
-                    >+61&#40;0&#41; 383 766 284</a
-                  >
-                </li>
-                <li class="cater-cont__item">
-                  <a
-                    href="mailto:noreply@envato.com"
-                    class="cater-cont__link cater-cont__link__mail"
-                    >noreply@envato.com</a
-                  >
-                </li>
-              </ul>
+            <div class="cater-card__pic">
+              <div class="cater-placepic">
+                <div class="cater-place">
+                  <p class="cater-place__name">New York</p>
+                  <p class="cater-place__text">
+                    Fusce ut velit laoreet, tempus arcu molestie vulputate
+                  </p>
+                </div>
+                <div class="cater-time">
+                  <ul class="cater-time__list">
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Monday - Friday</p>
+                      <p class="cater-time__time">06:00 AM - 10:00 PM</p>
+                    </li>
+                    <li class="cater-time__item">
+                      <p class="cater-time__name">Saturday - Sunday</p>
+                      <p class="cater-time__time">08:00 AM - 10:00 PM</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <picture>
+                <source
+                  srcset="
+                    ./images/img/food-cafe-waffle_640.jpg 1x,
+                    ./images/img/food-cafe-waffle_640.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/img/food-cafe-waffle_480.jpg 1x,
+                    ./images/img/food-cafe-waffle_480.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/img/food-cafe-waffle_640.jpg 1x,
+                    ./images/img/food-cafe-waffle_640.jpg 2x
+                  "
+                  media="(min-width: 480px)"
+                />
+                <img
+                  src="./images/img/food-cafe-waffle_640.jpg"
+                  alt="Cafe-Waffle Ice cream"
+                  class="cater-card_img"
+                />
+              </picture>
             </div>
+
+            <ul class="cater-cont">
+              <li class="cater-cont__item">
+                <a href="tel:+610383766284" class="cater-cont__link cater-cont__link__tel"
+                  >+61&#40;0&#41; 383 766 284</a
+                >
+              </li>
+              <li class="cater-cont__item">
+                <a href="mailto:noreply@envato.com" class="cater-cont__link cater-cont__link__mail"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
           </div>
         </li>
       </ul>
-      <div class="cater-btn">
-        <button type="button" class="btn cater-btn__locat" data-modal-map-open>
-          Our Locations
-          <svg class="cater-btn__icons" width="8" height="16">
-            <use href="./images/icons/icons.svg#icon-btn-vector-white"></use>
-          </svg>
-        </button>
-        <button type="button" class="btn cater-btn__franch" data-modal-franchise-open>
-          Franchise
-          <svg class="cater-btn__icons" width="8" height="16">
-            <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
-          </svg>
-        </button>
-      </div>
+      <ul class="cater-btn">
+        <li class="cater-btn__item">
+          <button type="button" class="btn cater-btn__locat" data-modal-map-open>
+            Our Locations
+            <svg class="cater-btn__icons" width="8" height="16">
+              <use href="./images/icons/icons.svg#icon-btn-vector-white"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="cater-btn__item">
+          <button type="button" class="btn cater-btn__franch" data-modal-franchise-open>
+            Franchise
+            <svg class="cater-btn__icons" width="8" height="16">
+              <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
+            </svg>
+          </button>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
