--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -9,13 +9,11 @@
                     cursus,
                     faucibus lorem eget, egestas eros.
                     Maecenas eleifend erat at justo fringilla.</p>
-                <p class="about-text__description-bottom">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-                    Mauris
-                    rhoncus orci in imperdiet placerat.
-                    Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br />
-                    <br />
-                    Aliquam erat volutpat. Aenean accumsan.
-                </p>
+                    <p class="about-text__description-bottom">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+                        Mauris
+                        rhoncus orci in imperdiet placerat.
+                        Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
+                    <p class="about-text__description-under-bottom"> Aliquam erat volutpat. Aenean accumsan.</p> 
                 <button type="button" class="btn btn-about">Read more 
                     <svg class="bnt-about__icon" width="8" height="16">
                         <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
