bugfix/script and btn-to-footer

--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -99,7 +99,7 @@
         />
         <img src="./images/img/h3-desk_1x.png" alt="Girl eats ice cream" />
       </picture>
-      <a href="#" class="btn-arrow-right">
+      <a href="#footer" class="btn-arrow-right">
         <picture class="arrow-right">
           <source
             srcset="
