--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__parts container">
     <div class="footer-title part">
       <p class="footer__title--one">homemade ice cream made</p>
